modules/algorithms/src/test/resources/PhRepexTestFiles/invalidAfterPhFail/3/LYS_penta.esv
 Number of ESVs and Title :
      1  LYS_penta
 Current Theta Positions :
    1.5622095605356363E+00
 Current Atomic Velocities :
    9.3093366742304150E-01
 Current Atomic Accelerations :
    3.8431982803311385E+01
 Current Lambda Histogram(s) :
 ESV: 3-LYS (0) pH: 9.90
        X  [0.0-0.1]  [0.1-0.2]  [0.2-0.3]  [0.3-0.4]  [0.4-0.5]  [0.5-0.6]  [0.6-0.7]  [0.7-0.8]  [0.8-0.9]  [0.9-1.0]
 λ
 [0.0-0.1]         0         0         0         0         0         0         0         0         0         0
 [0.1-0.2]         0         0         0         0         0         0         0         0         0         0
 [0.2-0.3]         0         0         0         0         0         0         0         0         0         0
 [0.3-0.4]         0         0         0         0         0         0         0         0         0         0
 [0.4-0.5]         0         0         0         0         0         0         0         0         0         0
 [0.5-0.6]         0         0         0         0         0         0         0         0         0         0
 [0.6-0.7]         0         0         0         0         0         0         0         0         0         0
 [0.7-0.8]         0         0         0         0         0         0         0         0         0         0
 [0.8-0.9]         0         0         0         0         0         0         0         0         0         0
 [0.9-1.0]        48         0         0         0         0         0         0         0         0         0

